@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1695 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Added 'generateImportedSchemas' option to code generator Ant task.
+       Details: http://jira.codehaus.org/browse/CASTOR-1695
+       (Ralf - 20061116)
+
 XML:   Resolved issue CASTOR-936 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Fixed problem with generated code for unbounded choices.
        Details: http://jira.codehaus.org/browse/CASTOR-936
